k8s/deploy/hazelcast/2_hazelcast-cluster.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hazelcast-cluster
spec:
  serviceName: hazelcast-cluster
  replicas: 3
  selector:
    matchLabels:
      app: hazelcast-cluster
  template:
    metadata:
      labels:
        app: hazelcast-cluster
    spec:
      containers:
        - name: hazelcast-cluster
          image: hazelcast/hazelcast:5.3.1-slim
          ports:
          - containerPort: 5701
          volumeMounts:
            - name: hazelcast-storage
              mountPath: /data/hazelcast
      volumes:
        - name: hazelcast-storage
          configMap:
            name: hazelcast-configuration

---

apiVersion: v1
kind: Service
metadata:
  name: hazelcast-cluster
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: hazelcast-cluster
  ports:
    - name: tcp-hazelcast
      port: 5701
