k8s/deploy/hazelcast/4_hazelcast-mc.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hazelcast-mc
spec:
  serviceName: hazelcast-mc
  replicas: 1
  selector:
    matchLabels:
      app: hazelcast-mc
  template:
    metadata:
      labels:
        app: hazelcast-mc
    spec:
      containers:
        - name: hazelcast-mc
          image: hazelcast/management-center:5.3.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: hazelcast-mc-storage
              mountPath: /data
      volumes:
        - name: hazelcast-mc-storage
---

apiVersion: v1
kind: Service
metadata:
  name: hazelcast-mc
spec:
  type: ClusterIP
  selector:
    app: hazelcast-mc
  ports:
    - name: hazelcast-mc-http
      port: 8080
