k8s/deploy/hazelcast/5_hazelcast-mc-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hazelcast-mc-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hazelcast-mc
spec:
  hosts:
  - "hazelcast.mapapp.local"
  gateways:
  - hazelcast-mc-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hazelcast-mc
        port:
          number: 8080
